turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:3: error: ';' expected but 'for' found.
}for(i<- 1 to 6){
 ^Source:11: error: Unmatched closing brace '}' ignored here
}
^